kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  clusterIP: None
  ports:
  - port: 3030
    name: server
  selector:
    app: backend
---
## mongoDB primary Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-primary
spec:
  clusterIP: None
  ports:
  - port: 27017
    name: mongo
  selector:
    app: mongodb-primary
---
## mongoDB Secondary Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-secondary
spec:
  clusterIP: None
  ports:
  - port: 27017
    name: mongo
  selector:
    app: mongodb-secondary
---
## mongoDB Arbiter Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-arbiter
spec:
  clusterIP: None
  ports:
  - port: 27017
    name: mongo
  selector:
    app: mongodb-arbiter
---
## Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  clusterIP: None
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: frontend
