kubernetes/ingress.yaml
apiVersion:  extensions/v1beta1
kind: Ingress
metadata:
  name: framework
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
---
apiVersion:  extensions/v1beta1
kind: Ingress
metadata:
  name: api
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: backend
          servicePort: 3030
